Prepare 0.3.2-alpha.1 release